<resources>
    <string name="app_name">Search By Image</string>
    <string name="share_action_name">Image Search</string>
    <string name="hello">Select this app in share menu to upload image to selected search engine\nOr just click upload button to select image</string>
    <string name="hello_gp">Select this app in share menu to upload image to Google image search\nOr just click upload button to select image</string>
    <string name="uploading">Uploading…</string>

    <string-array name="search_engines">
        <item>Google</item>
        <item>Baidu</item>
        <item>iqdb</item>
        <item>TinEye</item>
        <item>SauceNAO</item>
        <item>ascii2d</item>
    </string-array>

    <string name="usage">Usage</string>
    <string name="search_engine">Search engine</string>
    <string name="safe_search">Safe search</string>
    <string name="about">About</string>
    <string name="open_source">Open source</string>
    <string name="general">General</string>
    <string name="rate">Rate me</string>
    <string name="rate_summary">I\'ll be happy if you rate me 5 stars</string>
    <string name="build_version">Build version</string>

    <string name="safe_search_summary">Block inappropriate or explicit images</string>

    <string name="google_settings">Google settings</string>
    <string name="google_region_redirect">Region redirect</string>
    <string name="google_region_redirect_custom">Custom Google URL</string>

    <string-array name="google_region_redirects">
        <item>Default</item>
        <item>Use google.com</item>
        <item>Custom</item>
    </string-array>

    <string name="iqdb_settings">iqdb settings</string>
    <string name="iqdb_service_select">Search sites</string>
    <string name="iqdb_forcegray">Ignore colors</string>

    <string name="copy_url">Copy url</string>
    <string name="save_image">Save image</string>
    <string name="open_with">Open with…</string>
    <string name="open">open</string>


    <string name="share">Share</string>
    <string name="share_url">Share via</string>

    <string name="use_chrome_custom_tabs">Use build-in browser</string>
    <string name="use_chrome_custom_tabs_summary">Use WebView or Chrome custom tabs</string>

    <string name="search_result">%s Search Result</string>

    <string name="settings">Settings</string>
    <string name="setting_each_time">Open settings before upload</string>
    <string name="resize_image">Compress upload image</string>
    <string name="try_resize_image_if_error">Try this if upload error</string>
    <string name="start_upload">Start upload</string>

    <string name="permission_require">Permission require</string>
    <string name="permission_require_detail">It seems the application need READ_EXTERNAL_STORAGE permission to upload file.</string>
    <string name="get_permission">get permission</string>

    <string name="donate">Donate</string>
    <string name="donate_summary">Alipay: rikka@xing.moe</string>

    <string name="something_wrong">Something went wrong</string>

    <string name="saucenao_settings">SauceNAO settings</string>
    <string name="saucenao_hide_title">Hide</string>
    <string name="saucenao_database_title">Database</string>

    <string-array name="saucenao_hide">
        <item>None</item>
        <item>Known Explicit</item>
        <item>Known and Suspected Explicit</item>
        <item>All but Known Safe</item>
    </string-array>

    <string name="timeout_exception">Connection timed out</string>
    <string name="unknown_host_exception">Domain resolution error</string>
    <string name="socket_exception">Network error</string>

    <string name="notice">Note</string>
    <string name="notice_baidu">WEBP image or large image is not supported by Baidu</string>

    <string name="show_result_in">Show result in</string>
    <string name="built_in_browser">Built-in browser</string>
    <string name="chrome_custom_tabs">Chrome custom tabs</string>
    <string name="browser_app">Browser app</string>
    <string name="search_this_image_by_google">Search Google for this image</string>
    <string name="refresh">Refresh</string>
    <string name="copy_link">Copy link</string>
    <string name="open_in_browser">Open in browser app</string>
    <string name="copy_to_clipboard">%s copied to clipboard.</string>

    <string name="replace_file">replace file</string>
    <string name="create_new_file">create new file</string>
    <string name="file_overwrite" formatted="false"><![CDATA[Do you want to replace the existing file <b>%1$s</b> in <b>%2$s</b>?]]></string>

    <string name="save_failed">Save failed</string>
    <string name="downloaded">%s downloaded</string>
    <string name="download_complete">Download complete.</string>
    <string name="download_failed">Download failed</string>

    <string name="send_via">Send via</string>

    <string name="app_crash_title">App crashed…</string>
    <string name="app_crash_message">Send the crash log to app developer with mail app to help fix the bug.</string>
    <string name="app_crash_no_email_client">No mail app installed</string>
    <string name="baidu_settings">Baidu settings</string>

    <string name="edit_sites">Search engines</string>
    <string name="edit_site">Edit data</string>
    <string name="request_url">Request url</string>
    <string name="engine_name">Name</string>
    <string name="upload_form_key">Key</string>
    <string name="upload_form_value">Value</string>
    <string name="upload_form_your_image">(image)</string>
    <string name="upload_form_built_in_selector">(selector)</string>
    <string name="upload_form_add">New form data</string>
    <string name="built_in">Built-in</string>
    <string name="custom">Custom</string>
    <string name="check_your_data">Check your data</string>
    <string name="choose_one">Please enable at least one search engine</string>

    <string name="open_action">Open action</string>
    <string name="open_url">Open URL</string>
    <string name="open_html">Open saved HTML file in WebView</string>
    <string name="open_iqdb">Built-in viewer for iqdb.org</string>

    <string name="advance">Advance</string>
    <string name="custom_search_engine">Custom search engines</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="post_form">Form</string>
    <string name="not_empty">Should not be empty</string>

    <string name="invalid_web_url">Url is invalid</string>
    <string name="target_app_not_found">Don\'t have apps to handle this action.</string>
    <string name="file_not_found">File not found.\nPlease try again.</string>

    <string name="upload_failed">Upload failed</string>
    <string name="contact">Contact me</string>
    <string name="contact_detail">If you meet problems, please contact me</string>
    <string name="no_chrome_available">Use WebView due to no available Chrome installed</string>
    <string name="no_webview">WebView not installed on your device.</string>
    <string name="webview_version_error">WebView version is incorrect, please reinstall webview in Google Play.</string>
    <string name="download_manager_disabled">DownloadManager is disabled. Please enable it.</string>

    <plurals name="uploading_notification">
        <item quantity="one">Uploading %d image</item>
        <item quantity="other">Uploading %d images</item>
    </plurals>
    <string name="upload_select_engine">Select a search engine</string>
    <string name="upload_start">Start upload</string>
    <string name="upload_settings">Other settings</string>
    <string name="upload_background">Run in background</string>
    <string name="upload_getting_image">Getting image…</string>
    <string name="upload_require_permission">Require permission</string>
    <string name="upload_permission_denied">Permission denied</string>
    <string name="upload_get_image_error">Error getting image</string>
    <string name="upload_engine_not_exist">Engine not exist</string>
    <string name="upload_working">Uploading and waiting for response…</string>

    <string name="settings_notify_background">Notify when background</string>
    <string name="settings_notify_background_summary">Notify instead of directly open result when upload background</string>

    <string name="night_mode">Night mode</string>
    <string name="night_mode_off">Off</string>
    <string name="night_mode_on">On</string>
    <string name="night_mode_auto">Auto</string>
    <string name="night_mode_follow_system">Follow system</string>

    <string name="pay_gp">Google Play</string>
    <string name="pay_alipay">Alipay</string>
    <string name="donate_text">Do you find this app useful?\nSupport developer by sending donation to the developer!</string>
    <string name="pay_gp_set_up_failed">Setting up in-app billing failed, maybe you haven\'t signed in your Google account or Google Play Store is not installed properly.</string>
    <string name="donate_thanks">Thank you for your support!</string>
    <string name="donate_play_required">Require Google Play version.</string>

    <string name="shortcut_upload_long">Upload new image</string>
    <string name="shortcut_upload_short">Upload</string>
    <string name="shortcut_upload_disabled">Upload</string>

    <string name="donate_request">Do you enjoy using this app?</string>
    <string name="donate_request_1_message">Would like to send donation to the developer as support?</string>
    <string name="donate_request_2_message">Can you tell why don\'t like it?</string>
    <string name="donate_request_1_yes">Yes, bring me there!</string>
    <string name="donate_request_1_no">No, maybe later.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_like_1">I can\'t get the result I want.</string>
    <string name="not_like_1_message">I\'m sorry I can\'t help. The result is controlled by search engine you select.\nIt\'s harder if you want to get result related to the thing in the image.</string>
    <string name="not_like_2">I meet some bug.</string>
    <string name="not_like_2_message">Do you want to send feedback to the developer?</string>
    <string name="not_like_3">I want to send feedback.</string>
    <string name="send_feedback">Send feedback</string>

    <plurals name="notification_result_count">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>
    <string name="notification_upload_failed" formatted="false">%s upload failed</string>
    <string name="notification_uploaded" formatted="false">%s uploaded</string>
    <string name="notification_tap_to_view" formatted="false">Tap to view result</string>

</resources>