<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="screen">

    <PreferenceCategory
        android:key="category_advance"
        android:order="8"
        android:title="@string/advance">

        <Preference
            android:key="advance"
            android:title="@string/custom_search_engine">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="about"
        android:order="9"
        android:title="@string/about">

        <Preference
            android:key="version"
            android:title="@string/build_version">

        </Preference>

        <Preference
            android:key="contact"
            android:summary="@string/contact_detail"
            android:title="@string/contact">
        </Preference>

        <Preference
            android:summary="@string/rate_summary"
            android:title="@string/rate">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=rikka.searchbyimage2"/>
        </Preference>

        <Preference
            android:key="donate"
            android:summary="@string/donate_summary"
            android:title="@string/donate"/>

        <Preference
            android:key="open_source"
            android:summary="https://github.com/RikkaW/SearchByImage"
            android:title="@string/open_source">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>