<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/rikka.searchbyimage">

    <Preference
        android:summary="@string/hello"
        android:title="@string/usage"/>

    <PreferenceCategory
        android:title="@string/general"
        android:key="category_general">

        <rikka.searchbyimage.widget.DropDownPreference
            android:defaultValue="0"
            android:key="search_engine_preference"
            android:title="@string/search_engine"
            app:myEntries="@array/search_engines"
            app:myEntryValues="@array/search_engines_value"/>

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="safe_search_preference"
            android:summary="@string/safe_search_summary"
            android:title="@string/safe_search"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:title="@string/build_version"
            android:key="version">

        </Preference>

        <Preference
            android:title="@string/rate"
            android:summary="@string/rate_summary">

            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=rikka.searchbyimage" />
        </Preference>


        <Preference
            android:summary="https://github.com/RikkaW/SearchByImage"
            android:title="@string/open_source">

            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/RikkaW/SearchByImage" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>