<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="screen">

    <PreferenceCategory
        android:title="@string/general"
        android:key="category_general"
        android:order="1">

        <SimpleMenuPreference
            android:key="search_engine_preference"
            android:title="@string/search_engine"
            android:summary="%s"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="setting_each_time"
            android:title="@string/setting_each_time"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="resize_image"
            android:title="@string/resize_image"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_result"
            android:title="@string/settings_notify_background"
            android:summary="@string/settings_notify_background_summary"/>

        <SimpleMenuPreference
            android:defaultValue="2"
            android:key="show_result_in"
            android:title="@string/show_result_in"
            android:summary="%s"
            android:entries="@array/open_with"
            android:entryValues="@array/open_with_value"/>

    </PreferenceCategory>

</PreferenceScreen>