<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/rikka.searchbyimage2"
    android:key="screen">

    <PreferenceCategory
        android:title="@string/google_settings"
        android:key="category_google"
        android:order="2"
        android:layout="@layout/preference_category_material">

        <rikka.searchbyimage.widget.DropDownPreference
            android:key="google_region_preference"
            android:title="@string/google_region_redirect"
            app:myEntries="@array/google_region_redirects"
            app:myEntryValues="@array/google_region_redirect_value"
            android:defaultValue="0"
            android:layout="@layout/preference_material"/>

        <rikka.searchbyimage.widget.EditTextPreference
            android:key="google_region"
            android:title="@string/google_region_redirect_custom"
            android:defaultValue= "www.google.com"
            android:layout="@layout/preference_material"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/iqdb_settings"
        android:key="category_iqdb"
        android:order="2"
        android:layout="@layout/preference_category_material">

        <MultiSelectListPreference
            android:key="iqdb_service"
            android:title="@string/iqdb_service_select"
            android:entries="@array/iqdb_service_title"
            android:entryValues="@array/iqdb_service_id"
            android:defaultValue="@array/iqdb_service_id_default"
            android:layout="@layout/preference_material"/>

        <SwitchPreference
            android:key="iqdb_forcegray"
            android:title="@string/iqdb_forcegray"
            android:defaultValue="false"
            android:layout="@layout/preference_material"/>

    </PreferenceCategory>

</PreferenceScreen>