<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="screen">

    <PreferenceCategory
        android:title="@string/general"
        android:key="category_general"
        android:order="1"
        android:layout="@layout/preference_category_material">

        <android.support.v14.preference.SwitchPreference
            android:defaultValue="false"
            android:key="setting_each_time"
            android:title="@string/setting_each_time"
            android:layout="@layout/preference_material"/>

        <android.support.v14.preference.SwitchPreference
            android:defaultValue="true"
            android:key="resize_image"
            android:title="@string/resize_image"
            android:layout="@layout/preference_material"/>

        <me.qixingchen.settings.DropDownPreference
            android:defaultValue="0"
            android:key="show_result_in"
            android:title="@string/show_result_in"
            app:myEntries="@array/open_with"
            app:myEntryValues="@array/open_with_value"
            android:layout="@layout/preference_material"/>

        <!--<SwitchPreference
            android:defaultValue="true"
            android:key="use_chrome_custom_tabs"
            android:title="@string/use_chrome_custom_tabs"
            android:summary="@string/use_chrome_custom_tabs_summary"
            android:layout="@layout/preference_material"/>-->

    </PreferenceCategory>

</PreferenceScreen>